--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
     - libprotobuf
     - nasm
     - sed
-    - rsync  # [linux]
+    - rsync
     # realpath is not available from the docker image for cuda <= 10.2
     # so we install coreutils here
     - coreutils  # [cuda_compiler_version != "None"]
@@ -275,7 +275,7 @@ outputs:
   - name: libtensorflow
     script: cp_libtensorflow.sh
     build:
-      skip: true  # [not linux]
+      skip: true  # [win]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
       string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
       run_exports:
@@ -313,13 +313,13 @@ outputs:
       requires:
         - {{ compiler('c') }}
       commands:
-        - test -f $PREFIX/lib/libtensorflow.so  # [not win and cuda_compiler_version == "None"]
-        - ./test_libtensorflow.sh               # [not win and cuda_compiler_version == "None"]
+        - test -f $PREFIX/lib/libtensorflow${SHLIB_EXT}  # [not win and cuda_compiler_version == "None"]
+        - ./test_libtensorflow.sh                        # [not win and cuda_compiler_version == "None"]
 
   - name: libtensorflow_cc
     script: cp_libtensorflow_cc.sh
     build:
-      skip: true  # [not linux]
+      skip: true  # [win]
       string: cuda{{ cuda_compiler_version | replace('.', '') }}h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version != "None"]
       string: cpu_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [cuda_compiler_version == "None"]
       run_exports:
@@ -357,8 +357,8 @@ outputs:
       requires:
         - {{ compiler('cxx') }}
       commands:
-        - test -f $PREFIX/lib/libtensorflow_cc.so  # [not win and cuda_compiler_version == "None"]
-        - ./test_libtensorflow_cc.sh               # [not win and cuda_compiler_version == "None"]
+        - test -f $PREFIX/lib/libtensorflow_cc${SHLIB_EXT}  # [not win and cuda_compiler_version == "None"]
+        - ./test_libtensorflow_cc.sh                        # [not win and cuda_compiler_version == "None"]
 
   # 2021/08/01, hmaarrfk
   # While this seems like a roundabout way of defining the package name
