--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,7 @@ source:
       - patches/0001-Blacklist-well-known-protos.patch
       - patches/0001-Remove-some-usage-of-absl-str_format-in-CUDA.patch
       - patches/0001-Patch-ml_dtype-to-make-constructor-unambiguous.patch
+      - patches/0001-Load-cuda_build_defs-from-tsl.patch
   - url: https://github.com/tensorflow/estimator/archive/refs/tags/v{{ estimator_version.replace(".rc", "-rc") }}.tar.gz
     sha256: 2d7e100b1878084da34b5e23b49a0cbb5ee8a7add74b7dd189a82ada1cf85530
     folder: tensorflow-estimator
