--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -257,6 +257,8 @@ outputs:
         - keras >=2.15,<2.16
         # avoid that people without GPUs needlessly download ~0.5-1GB
         - __cuda                                                  # [cuda_compiler_version != "None"]
+        # https://github.com/conda-forge/tensorflow-feedstock/issues/296#issuecomment-1835781851
+        - cuda-nvcc-tools                                         # [(cuda_compiler_version or "").startswith("12")]
         - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.9") }}  # [osx and x86_64]
     # TODO: decide on the name of the package
     # run_constrained:
