fixup cuda pins

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -84,8 +84,7 @@ requirements:
     # GPU requirements for CUDA
     - cudnn      # [cuda_compiler_version != "None"]
     - nccl       # [cuda_compiler_version != "None"]
-    - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version == "11.8"]
-    - cuda-version 12   # [(cuda_compiler_version or "").startswith("12")]
+    - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
     - cuda-cupti-dev    # [(cuda_compiler_version or "").startswith("12")]
     - cuda-cudart-dev   # [(cuda_compiler_version or "").startswith("12")]
     - cuda-nvml-dev     # [(cuda_compiler_version or "").startswith("12")]
@@ -189,8 +188,7 @@ outputs:
         # GPU reuqirements
         - cudnn                   # [cuda_compiler_version != "None"]
         - nccl                    # [cuda_compiler_version != "None"]
-        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version == "11.8"]
-        - cuda-version 12   # [(cuda_compiler_version or "").startswith("12")]
+        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
         - cuda-cupti-dev    # [(cuda_compiler_version or "").startswith("12")]
         - cuda-cudart-dev   # [(cuda_compiler_version or "").startswith("12")]
         - cuda-nvml-dev     # [(cuda_compiler_version or "").startswith("12")]
@@ -353,8 +351,7 @@ outputs:
         - {{ pin_subpackage('tensorflow-base', exact=True) }}
         # Keep the cuda version here since it helps package solvers
         # decide on the cuda variant
-        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version == "11.8"]
-        - cuda-version 12   # [(cuda_compiler_version or "").startswith("12")]
+        - cuda-version {{ cuda_compiler_version }}  # [cuda_compiler_version != "None"]
       run:
         - python
         - {{ pin_subpackage('tensorflow-base', exact=True) }}
