--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -14,6 +14,7 @@ github:
 test: native_and_emulated
 conda_build_tool: conda-build+conda-libmamba-solver
 github_actions:
+  timeout_minutes: 720
   self_hosted: true
   triggers:
   - push
