--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,8 @@ source:
       - patches/0017-Always-use-linux-sed-style.patch
       - patches/0018-Adjust-relative-path-for-libdevice.patch
       - patches/0019-Update-flatbuffers-static-assert.patch
+      # https://github.com/tensorflow/tensorflow/pull/62684
+      - patches/62684.patch
 
       # Not ported yet
       # - patches/0023-Fix-missing-includes-needed-for-Abseil-lts_2024_01_1.patch
