--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -152,10 +152,10 @@ requirements:
     - six >=1.12
     - termcolor >=1.1.0
     - typing_extensions >=3.6.6
-    - wrapt >=1.11.0,<1.15
+    - wrapt >=1.11.0
     # TF-API needs to move in sync
     - tensorboard >=2.15,<2.16
-    - keras >=2.15,<2.16
+    - keras >=3.0
 
 outputs:
   # 2021/12/29: hmaarrfk
